src/test/ui/resolve/issue-103474.stderr
error[E0425]: cannot find function `first` in this scope
  --> $DIR/issue-103474.rs:6:9
   |
LL |         first()
   |         ^^^^^ not found in this scope
   |
help: consider using the associated function
   |
LL |         self.first()
   |         +++++

error[E0425]: cannot find function `no_method_err` in this scope
  --> $DIR/issue-103474.rs:11:9
   |
LL |         no_method_err()
   |         ^^^^^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
